fix context overflow width for small viewports and use different dropdown icon

--- a/src/components/ContextOverlay/contextoverlay.scss
+++ b/src/components/ContextOverlay/contextoverlay.scss
@@ -5,20 +5,20 @@ $pt-dark-popover2-background-color: $dark-gray4 !default;
 
 @import "~@blueprintjs/popover2/src/popover2";
 
-.#{$ns}-overlay-content {
+.#{$ns}-overlay-content,
+.#{$ns}-popover2,
+.#{$ns}-popover2-content,
+.#{$ns}-popover2-target {
     max-width: 100%;
 }
 
 .#{$ns}-popover2-content {
-    max-width: 100%;
-
     .#{$ns}-input-group {
         display: block;
     }
 }
 
 .#{$ns}-popover2-target {
-    max-width: 100%;
     cursor: pointer;
 }
 
